--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
  
 <body>
   <h1>Isabella Galustyan</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+  <p>ik kann niet focussen op mijn studie </p>
+  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" alt="mijn hersenen als ik studeer" />
 </body>
  
 </html>
