--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
  
 <body>
   <h1>Isabella Galustyan</h1>
-  <p>ik kann niet focussen op mijn studie </p>
+  <p>ik kan niet focussen op mijn studie </p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" alt="mijn hersenen als ik studeer" />
+ <h2><strong>Zo is mijn hersenen als ik aan het studeren ben!!</strong> </h2>
 </body>
  
 </html>
