--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <html>
  
 <body>
-  <h1>Isabella Galustyan</h1>
-  <p>ik kan niet focussen op mijn studie </p>
+  <h1>It's Time to disco</h1>
+  <p> I'am Done with CSS language </p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" alt="mijn hersenen als ik studeer" />
- <h2><strong>Zo is mijn hersenen als ik aan het studeren ben!!</strong> </h2>
+ <h2><strong> Halleluja !!</strong> </h2>
+<br>
+ <p>
+ <h3><strong>After 5 hours of work i already finish the second languages of coding </strong></h3>
+ </p>
 </body>
  
 </html>
