--- a/index.html
+++ b/index.html
@@ -1,14 +1,60 @@
-<html>
- 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel='stylesheet' href="./index.css"> 
+</head>
 <body>
-  <h1>It's Time to disco</h1>
-  <p> I'am Done with CSS language </p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" alt="mijn hersenen als ik studeer" />
- <h2><strong> Halleluja !!</strong> </h2>
-<br>
- <p>
- <h3><strong>After 5 hours of work i already finish the second languages of coding </strong></h3>
- </p>
-</body>
- 
+    <div class="intro">
+        <h1><strong>ZV FOOD</strong></h1>
+        <br>
+        <p>Hi guys!! We'd like to introduce ourselves, we
+            are Zakarea and Vladimir. ZV Food is an extraordinary
+            service where we bring the restaurant to your home to
+            make your dinner parties extra special and less
+            stressful. We take care of everything: Appetizers, main
+            course and dessert ( and the clean up afterwards (13))
+            We hope you'll enjoy our services !!</p>
+            <img src="./resources/img/" alt="">
+        
+    </div>
+    <div class="about">
+        <h2>brothers befor everything</h2>
+        <p>Zakarea Hmiani 26 years old and Tada Vladimir 25 years old , we know eachother like every friends but with us it was special from the first momment,like friends from a long time .
+we have the same pation ,the same dreams and the same Love <strong>Food</strong> 
+     </p>
+    <img src="" alt="">
+    </div>
+    <div class="start">
+        <h2>How we start</h2>
+        <p>every time if some one from our friend have a party it will be always us how most made food for them , one day and like a joke we start talking with them about what did u think guys if we gonna start a instagram page and start posting things from our work there , averyone loved the idea and in this moment we start making pictures and videos for our project 
+            our first post was <strong>Sushi</strong> , we have a lot of motivation from our friends on media (sharing our page on them stoy's).And from this day we start getting ordrs from peapole .
+            So Voila!! that's how we start 
+        </p>
+        <img src="" alt="">
+    </div>
+    <div class="work">
+        <h2>How we work</h2>
+        <p>We have a special way to work beceaus for us all our costumers is our famillie , so if someone have a party of a birthday paryty they can just call and tell us which sort of food that he/she want
+             and what is his/her budget,then we take advance money from to buy all what we need and make sure that everything is looking perfectly and delicious ,
+             and after party he/she can see how it was and then he/she is aloud to give the money that he/she can beceaus like we say we are family so we most help eachother </p>
+             You want to take a look at our work !! <a href="" alt="target">click here</a>
+    </div>
+    <footer>
+        <div class="info">
+            <h2>Your meaining it what we looking for </h2>
+            <p>we like to know how u found our work and every  quastion,notices is welcome 
+                So don't forget to let a comment for us , and if u like to orther something be sure that it gonna be more than what u expect .
+
+            </p>
+            <ul>
+                <li>instagram: ZV Food</li>
+                <li>email:</li>
+                <li>GSM:</li>
+            </ul>
+        </div>
+    </footer>
 </html>
